<?xml version="1.0" encoding="utf-8"?>
<!--SL-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryColor"
    tools:context=".ui.main.ListCategoryItems">

    <include layout="@layout/titlebar"/>

    <!-- create a Linear Layout with horizontal orientation and weightSum property -->
    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/reportAnIssue2_textV"
            style="@style/normalTextView"
            android:maxLines="2"
            android:text="@string/report_an_issue" />

        <TextView
            android:id="@+id/categoryListTitle_textV"
            android:layout_width="wrap_content"
            style="@style/normalTextView"
            android:maxLines="2"
            android:text="@string/footpath_list_title"
            android:layout_marginLeft="15dp"
            android:layout_gravity="left" />

        <!--A scrollable list of items by nesting it in a NestedScrollView -->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:fillViewport="true">

            <AutoCompleteTextView
                android:id="@+id/footpathitems_listV"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                android:divider="@color/primaryColor"
                android:dividerHeight="2dp"
                android:nestedScrollingEnabled="true"
                android:text="Choose one"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallTextView"
            android:textStyle="bold"
            android:text="Location of the issue:"
            android:layout_marginLeft="15dp"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/addressInput_ET"
            style="@style/smallTextView"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edit_text_border"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="left"
            android:hint="Enter location"
            android:inputType="textMultiLine"
            android:maxLength="60"
            android:paddingStart="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallTextView"
            android:textStyle="bold"
            android:text="Or select the address by dragging the map pin"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="left"/>


        <TextView
            android:id="@+id/tv_select_current_location"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_image_view_border"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="SELECT CURRENT LOCATION"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="296dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:scaleType="fitXY" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginLeft="15dp"
            android:gravity="left"
            android:text="@string/back"
            style="@style/normalTextView"
            android:textColor="@color/secondaryTextColor"
            android:layout_weight="1"/>



        <Button
            android:id="@+id/next_button"
            style="@style/normalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginRight="15dp"
            android:text="Next >"
            android:textColor="@color/secondaryTextColor"
            android:gravity="right"
            android:layout_weight="1"/>


    </LinearLayout>


</LinearLayout>